provide a service interface

--- a/src/main/resources/plugin.properties
+++ b/src/main/resources/plugin.properties
@@ -1,2 +1,3 @@
 requiredPluginMigrationNr = 2
 importModels = de.deepamehta.webclient, de.deepamehta.contacts
+providedServiceInterface = de.deepamehta.plugins.mail.service.MailService
