--- a/src/main/resources/plugin.properties
+++ b/src/main/resources/plugin.properties
@@ -1,3 +1,6 @@
 requiredPluginMigrationNr = 2
-importModels = de.deepamehta.webclient, de.deepamehta.contacts
+importModels = de.deepamehta.contacts, \
+               de.deepamehta.files, \
+               de.deepamehta.webclient
+consumedServiceInterfaces = de.deepamehta.plugins.files.service.FilesService
 providedServiceInterface = de.deepamehta.plugins.mail.service.MailService
