configure owner and creator of mail configuration

--- a/src/main/resources/plugin.properties
+++ b/src/main/resources/plugin.properties
@@ -2,5 +2,6 @@ requiredPluginMigrationNr = 2
 importModels = de.deepamehta.contacts, \
                de.deepamehta.files, \
                de.deepamehta.webclient
-consumedServiceInterfaces = de.deepamehta.plugins.files.service.FilesService
+consumedServiceInterfaces = de.deepamehta.plugins.files.service.FilesService, \
+                            de.deepamehta.plugins.accesscontrol.service.AccessControlService
 providedServiceInterface = de.deepamehta.plugins.mail.service.MailService
