--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
         </dependency>
         <dependency>
             <groupId>de.deepamehta</groupId>
+            <artifactId>deepamehta-accesscontrol</artifactId>
+            <version>4.0.12-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>de.deepamehta</groupId>
             <artifactId>deepamehta-files</artifactId>
             <version>4.0.12-SNAPSHOT</version>
         </dependency>
