--- a/src/main/resources/plugin.properties
+++ b/src/main/resources/plugin.properties
@@ -2,6 +2,7 @@ requiredPluginMigrationNr = 2
 importModels = de.deepamehta.contacts, \
                de.deepamehta.files, \
                de.deepamehta.webclient
-consumedServiceInterfaces = de.deepamehta.plugins.files.service.FilesService, \
-                            de.deepamehta.plugins.accesscontrol.service.AccessControlService
+consumedServiceInterfaces = de.deepamehta.plugins.accesscontrol.service.AccessControlService, \
+                            de.deepamehta.plugins.facets.service.FacetsService, \
+                            de.deepamehta.plugins.files.service.FilesService
 providedServiceInterface = de.deepamehta.plugins.mail.service.MailService
