--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,13 @@
         <version>4.1.3-SNAPSHOT</version>
     </parent>
 
+    <repositories>
+        <repository>
+            <id>deepamehta-public-repository</id>
+            <url>http://m2.deepamehta.de</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>de.deepamehta</groupId>
