--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
 
     <name>DeepaMehta 4 Mail</name>
     <groupId>de.deepamehta</groupId>
-    <artifactId>deepamehta-mail</artifactId>
+    <artifactId>dm43-deepamehta-mail</artifactId>
     <version>0.2-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
     <parent>
         <groupId>de.deepamehta</groupId>
         <artifactId>deepamehta-plugin-parent</artifactId>
-        <version>4.1.3-SNAPSHOT</version>
+        <version>4.3</version>
     </parent>
 
     <repositories>
@@ -26,12 +26,12 @@
         <dependency>
             <groupId>de.deepamehta</groupId>
             <artifactId>deepamehta-accesscontrol</artifactId>
-            <version>4.1.3-SNAPSHOT</version>
+            <version>4.3</version>
         </dependency>
         <dependency>
             <groupId>de.deepamehta</groupId>
             <artifactId>deepamehta-files</artifactId>
-            <version>4.1.3-SNAPSHOT</version>
+            <version>4.3</version>
         </dependency>
         <dependency>
             <groupId>de.deepamehta</groupId>
