--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <name>DeepaMehta 4 Mail</name>
     <groupId>de.deepamehta</groupId>
     <artifactId>dm43-deepamehta-mail</artifactId>
-    <version>0.2-SNAPSHOT</version>
+    <version>0.2</version>
     <packaging>bundle</packaging>
 
     <parent>
