--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
 
     <name>DeepaMehta 4 Mail</name>
     <groupId>de.deepamehta</groupId>
-    <artifactId>dm43-deepamehta-mail</artifactId>
-    <version>0.2</version>
+    <artifactId>dm44-deepamehta-mail</artifactId>
+    <version>0.3.0-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
     <parent>
         <groupId>de.deepamehta</groupId>
         <artifactId>deepamehta-plugin-parent</artifactId>
-        <version>4.3</version>
+        <version>4.4</version>
     </parent>
 
     <repositories>
@@ -26,17 +26,17 @@
         <dependency>
             <groupId>de.deepamehta</groupId>
             <artifactId>deepamehta-accesscontrol</artifactId>
-            <version>4.3</version>
+            <version>4.4</version>
         </dependency>
         <dependency>
             <groupId>de.deepamehta</groupId>
             <artifactId>deepamehta-files</artifactId>
-            <version>4.3</version>
+            <version>4.4</version>
         </dependency>
         <dependency>
             <groupId>de.deepamehta</groupId>
-            <artifactId>deepamehta-images</artifactId>
-            <version>0.9.1-SNAPSHOT</version>
+            <artifactId>dm44-deepamehta-images</artifactId>
+            <version>0.9.3</version>
         </dependency>
         <dependency>
             <groupId>javax.mail</groupId>
@@ -64,9 +64,8 @@
         </dependency>
     </dependencies>
 
-    <build>
+    <build> 
         <plugins>
-
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
