Mail functional with DeepaMehta 4.6, needs (conceptual) revision.

--- a/src/main/resources/plugin.properties
+++ b/src/main/resources/plugin.properties
@@ -1,4 +1,2 @@
-requiredPluginMigrationNr = 3
-importModels = de.deepamehta.contacts, \
-               de.deepamehta.files, \
-               de.deepamehta.webclient
+requiredPluginMigrationNr=3
+importModels=de.deepamehta.contacts,de.deepamehta.files,de.deepamehta.webclient
