--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <name>DeepaMehta 4 Mail</name>
     <groupId>de.deepamehta</groupId>
     <artifactId>dm47-deepamehta-mail</artifactId>
-    <version>0.3.1-SNAPSHOT</version>
+    <version>0.3.1</version>
     <packaging>bundle</packaging>
 
     <parent>
