--- a/pom.xml
+++ b/pom.xml
@@ -5,32 +5,32 @@
 
     <name>DeepaMehta 4 Mail</name>
     <groupId>de.deepamehta</groupId>
-    <artifactId>dm47-deepamehta-mail</artifactId>
-    <version>0.3.1</version>
+    <artifactId>dm48-deepamehta-mail</artifactId>
+    <version>0.3.2-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
     <parent>
         <groupId>de.deepamehta</groupId>
-        <artifactId>deepamehta-plugin-parent</artifactId>
-        <version>4.7</version>
+        <artifactId>deepamehta-plugin</artifactId>
+        <version>4.8</version>
     </parent>
 
     <dependencies>
         <dependency>
             <groupId>de.deepamehta</groupId>
             <artifactId>deepamehta-accesscontrol</artifactId>
-            <version>4.7</version>
+            <version>4.8</version>
         </dependency>
         <dependency>
             <groupId>de.deepamehta</groupId>
             <artifactId>deepamehta-files</artifactId>
-            <version>4.7</version>
+            <version>4.8</version>
         </dependency>
-        <dependency>
+        <!--dependency>
             <groupId>de.deepamehta</groupId>
             <artifactId>dm47-deepamehta-images</artifactId>
             <version>0.9.6</version>
-        </dependency>
+        </dependency-->
         <dependency>
             <groupId>javax.mail</groupId>
             <artifactId>mail</artifactId>
