--- a/src/main/resources/plugin.properties
+++ b/src/main/resources/plugin.properties
@@ -1,2 +1,2 @@
-requiredPluginMigrationNr=3
-importModels=de.deepamehta.contacts,de.deepamehta.files,de.deepamehta.webclient
+dm4.plugin.model_version=3
+dm4.plugin.activate_after=de.deepamehta.contacts,de.deepamehta.files,de.deepamehta.webclient
