--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <name>DeepaMehta 4 Mail</name>
     <groupId>de.deepamehta</groupId>
     <artifactId>dm48-deepamehta-mail</artifactId>
-    <version>0.3.2-SNAPSHOT</version>
+    <version>0.3.2</version>
     <packaging>bundle</packaging>
 
     <parent>
@@ -16,9 +16,7 @@
     </parent>
 
     <!--properties>
-        <dm4.deploy.dir>/home/malted/source/mikro/deepamehta/bundle-deploy</dm4.deploy.dir>
-        <dm4.deploy.dir>/home/malted/Schreibtisch/DeepaMehta4/bundle-deploy</dm4.deploy.dir>
-        <dm4.deploy.dir>/home/malted/Downloads/deepamehta-4.8.1/bundle-deploy</dm4.deploy.dir>
+        <dm4.deploy.dir>/home/terry/Downloads/deepamehta-4.8.4/bundle-deploy</dm4.deploy.dir>
     </properties-->
 
     <dependencies>
